Fix enviar bottom spacing

--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,7 @@ ul {
 	min-width: 170px;
 	text-align: center;
 	border: none;
+	margin-bottom: 30px;
 }
 
 .site-btn.btn-2 {
